tests/baselines/reference/externalModuleRefernceResolutionOrderInImportDeclaration.errors.txt
externalModuleRefernceResolutionOrderInImportDeclaration_file3.ts(4,7): error TS2339: Property 'bar' does not exist on type 'typeof import("externalModuleRefernceResolutionOrderInImportDeclaration_file1")'.


==== externalModuleRefernceResolutionOrderInImportDeclaration_file3.ts (1 errors) ====
    ///<reference path='externalModuleRefernceResolutionOrderInImportDeclaration_file2.ts'/>
    import file1 = require('./externalModuleRefernceResolutionOrderInImportDeclaration_file1');
    file1.foo();
    file1.bar();
          ~~~
!!! error TS2339: Property 'bar' does not exist on type 'typeof import("externalModuleRefernceResolutionOrderInImportDeclaration_file1")'.
    
    
==== externalModuleRefernceResolutionOrderInImportDeclaration_file1.ts (0 errors) ====
    export function foo() { };
    
==== externalModuleRefernceResolutionOrderInImportDeclaration_file2.ts (0 errors) ====
    declare module "externalModuleRefernceResolutionOrderInImportDeclaration_file1" {
        export function bar();
    }
    
    